k8s/service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tygon
  namespace: k8sdeploy
  labels:
    name: tygon
spec:
  selector:
    matchLabels:
      app: tygon
  template:
    metadata:
      labels:
        app: tygon
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: tygon
          image: ghcr.io/k8sdeploy/tygon:0.3.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tygon-service
  namespace: k8sdeploy
  labels:
    app: tygon
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: tygon

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: k8sdeploy
  name: tygon-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: acme-prod
  labels:
    app: tygon
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hooks.k8sdeploy.dev
      secretName: k8sdeploy-tls
  rules:
    - host: hooks.k8sdeploy.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tygon-service
                port:
                  number: 3000
